[package]
name = "rustlox"
authors = ["jinchaofs"]
version = "0.1.0"
edition = "2021"
description = "A lox interpreter written in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"

[build]
warn = ["unused_extern_crate"]
